--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/9f22e1a1c0.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>City Tours</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
